--- a/Styles/login.css
+++ b/Styles/login.css
@@ -4,13 +4,16 @@
 
 .login
 {
-    display: none;
+    opacity: 0;
+    display: flex;
     width: 50vw;
     height: 100vh;
-    /* display: flex;
-    align-items: center;
-    justify-content: space-evenly;*/
     flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(137, 118, 198);
+    color: white;
+    border-radius: 0 10vw 10vw 0;
 }
 
 .lHeading
@@ -34,7 +37,7 @@
     align-items: center;
     justify-content: center;
     font-size: 1.3vw;
-    background-color: #323232;
+    background-color: #2a2a2a;
     color: #fff;
     font-weight: 600;
     border-radius: 1vw;
@@ -51,4 +54,63 @@
 .methodIcon
 {
     margin: 0 0.5vw 0 0 ;
+}
+
+.loginForm
+{
+    margin: 2vw 0;
+    height: 15vw;
+    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    border-radius: 2vw;
+
+}
+
+.fieldName
+{
+    font-size: 1.4vw;
+    margin: 0.2vw;
+}
+
+.inputBox
+{
+    font-size: 1.4vw;
+    border-radius: 0.3vw;
+    margin: 0.2vw;
+    padding: 0 0.3vw;
+}
+
+.inputRow
+{
+    height: 3vw;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    padding: 0.5vw;
+}
+
+.loginButton
+{
+    margin: 1vw ;
+    width: 7vw;
+    height: 2.8vw;
+    background-color: #fff;
+    border-radius: 1vw;
+    color: #2a2a2a;
+    font-size: 1.4vw;
+    font-weight: 600;
+    transition: all 0.2s ease-out;
+}
+
+.loginButton:hover
+{
+    border-radius: 1.5vw;
+    background-color: #2a2a2a;
+    color: white;
+    font-size: 1.46vw;
 }
