--- a/Styles/login.css
+++ b/Styles/login.css
@@ -11,9 +11,18 @@
     flex-direction: column; 
     align-items: center;
     justify-content: center;
+    /* background-color: rgb(137, 118, 198);
+    color: white; */
+    /* border-radius: 0 10vw 10vw 0; */
+}
+
+.innerLogin
+{
+    height: 40vw;
+    width: 90%;
+    border-radius: 3vw;
+    margin: 3vw;
     background-color: rgb(137, 118, 198);
-    color: white;
-    border-radius: 0 10vw 10vw 0;
 }
 
 .lHeading
@@ -66,7 +75,8 @@
     justify-content: space-evenly;
     flex-direction: column;
     border-radius: 2vw;
-
+    /* background-color: rgb(137, 118, 198);
+    color: white; */
 }
 
 .fieldName
@@ -99,9 +109,9 @@
     margin: 1vw ;
     width: 7vw;
     height: 2.8vw;
-    background-color: #fff;
+    background-color: #2a2a2a;
     border-radius: 1vw;
-    color: #2a2a2a;
+    color: #fff;
     font-size: 1.4vw;
     font-weight: 600;
     transition: all 0.2s ease-out;
@@ -110,7 +120,7 @@
 .loginButton:hover
 {
     border-radius: 1.5vw;
-    background-color: #2a2a2a;
-    color: white;
+    background-color: #fff;
+    color: #2a2a2a;
     font-size: 1.46vw;
 }
