Background Colour Added to login page

--- a/Frontend/Styles/login.css
+++ b/Frontend/Styles/login.css
@@ -22,7 +22,7 @@
     width: 90%;
     border-radius: 4.5vw ;
     margin: 3vw;
-    background-color: rgb(130, 108, 199);
+    background-color: #826cc7;
     transition: all 0.2s ease-out;
 }
 
