Registration Page : -> Image +  Heading Done

--- a/Frontend/Styles/globals.css
+++ b/Frontend/Styles/globals.css
@@ -14,3 +14,10 @@
   /* background-color: #dddbf1; */
 }
 
+
+/* Entrass -------------------------------------------------------------------------- */
+
+::selection
+{
+  color: #b0a3d4;
+}
