--- a/Frontend/Styles/signUpPage.css
+++ b/Frontend/Styles/signUpPage.css
@@ -50,4 +50,55 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.mainForm
+{
+    background-color: #fff;
+    border-radius: 2.5vw;
+    width: 95%;
+    padding: 2vw;
+    transition: all 0.2s ease-out;
+}
+
+.mainForm:hover
+{
+    border-radius: 4vw;
+    border: 2px solid black;
+}
+
+.inputRow2
+{
+    width: 100%;
+    height: 2vw;
+    margin: 0.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    font-size: 1.2vw;
+}
+
+.field1
+{
+    width: 49%;
+    height: 99%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fieldName
+{
+    margin: 0.2w;
+}
+
+.fieldValue
+{
+    margin: 0.2vw 0.5vw;
+    border-radius: 0.5rem;
+    width: 13vw;
+    border: 1px solid black;
+    padding: 0 0.2vw;
+    font-size: 1.1vw;
 }
