--- a/Frontend/Styles/signUpPage.css
+++ b/Frontend/Styles/signUpPage.css
@@ -13,6 +13,7 @@
     justify-content: space-evenly;
     transition: all 0.2s ease-out;
     background-color: #dfd4ffe5;
+    color: #000;
     overflow: hidden;
 }
 
@@ -51,54 +52,98 @@
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
+    font-size: 1.1vw;
 }
 
 .mainForm
 {
     background-color: #fff;
-    border-radius: 2.5vw;
+    color: #000;
+    border-radius: 0.5vw 2.5vw 2.5vw 2.5vw;
+    height: 32rem;
     width: 95%;
     padding: 2vw;
     transition: all 0.2s ease-out;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
 }
 
 .mainForm:hover
 {
-    border-radius: 4vw;
-    border: 2px solid black;
+    border-radius: 0.7vw 4vw 4vw 4vw;
+    /* border: 2px solid black; */
 }
 
 .inputRow2
 {
     width: 100%;
     height: 2vw;
-    margin: 0.5vw;
+    margin: 1vw;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    font-size: 1.2vw;
+    font-size: 1.1vw;
 }
 
 .field1
 {
     width: 49%;
-    height: 99%;
+    height: 2vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 1vw 0;
 }
 
 .fieldName
 {
     margin: 0.2w;
+    color: #000;
 }
 
 .fieldValue
 {
     margin: 0.2vw 0.5vw;
-    border-radius: 0.5rem;
+    border-radius: 0rem;
     width: 13vw;
-    border: 1px solid black;
+    border-width: 0 0 2px 0;
+    border-color: #2a2a2a;
     padding: 0 0.2vw;
     font-size: 1.1vw;
+}
+
+.fieldValue:focus
+{
+    border-radius: 0.5rem;
+}
+
+.createButton
+{
+    background-color: #2a2a2a;
+    font-size: 1.1vw;
+    border-radius: 0.8vw;
+    height: 3vw;
+    width: 10vw;
+    padding: 0.2vw 0.5vw;
+    color: #fff;
+    transition: all 0.2s ease-out;
+}
+
+.createButton:hover
+{
+    background-color: #fff;
+    border: 2px solid #2a2a2a;
+    border-radius: 1.3vw;
+    color: #2a2a2a;
+    font-size: 1.15vw;
+}
+
+.createButton:active
+{
+    background-color: #826cc7;
+    color: #fff;
+    border: none;
 }
