--- a/Frontend/Styles/notesPage.css
+++ b/Frontend/Styles/notesPage.css
@@ -4,21 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
-.body
+.notesMain
 {
-  overflow: hidden;
-  font-family: 'Afacad';
-  /* background: linear-gradient(to left, #5337AC, #6951b7); */
-  background: linear-gradient(to right, #5337AC, #826cc7);
-  /* background: radial-gradient(circle, #826cc7, #ccc8f9); */
-  /* background-color: #dddbf1; */
-
-}
-
-
-/* Entrass -------------------------------------------------------------------------- */
-
-::selection
-{
-  color: #b0a3d4;
+    width: 100vw;
+    height: 100vh;
+    background-color: aliceblue;
 }
