--- a/Frontend/Styles/globals.css
+++ b/Frontend/Styles/globals.css
@@ -15,8 +15,40 @@
 
 }
 
+.logoLogin
+{
+  position: absolute;
+  top: -13%;
+  left: 1vw;
+  width: 20vw;
+  background-color: #b0a3d4;
+  border-radius: 0 0 1vw 1vw;
+  box-shadow: 1px 1px 10px 1px #2a2a2a;
+  color: #000;
+  z-index: 1;
+  font-size: 2.5vw;
+  font-weight: 600;
+  padding: 0.5vw 1vw;
+  text-align: center;
+  line-height: 2.3vw;
+  font-family: "Kalnia";
+  margin: 0 0 1.8vw 0;
+  transition: all 0.2s ease-out;
+}
 
-/* Entrass -------------------------------------------------------------------------- */
+.cNone
+{
+  cursor: default;
+}
+
+.logoLogin:hover
+{
+  box-shadow: 1px 1px 13px 1px #000;
+  /* height: 6.5vw;
+  padding: 1vw 0 0 0; */
+}
+
+/*----------------------------------------------- Entrass ----------------------------------------------------*/
 
 ::selection
 {
