--- a/Frontend/Styles/profileNav.css
+++ b/Frontend/Styles/profileNav.css
@@ -1,50 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Alef:wght@400;700&family=Kalnia:wght@100;200;300;400;500;600;700&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 .navbar
 {
-    z-index: 0;
-    width: 78vw;
-    height: 5vw;
-    background: linear-gradient(to right, #5337AC, #826cc7);
-    position: fixed;
-    top: 0;
-    right: 0;
-    color: aliceblue;
-    padding: 0.5vw 1vw;
-    border-radius: 0 0 1vw 0;
-    opacity: 0;
-    cursor: url(../public/icons8-circle-40-20x20.jpg), auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.innerNav
-{
+    width: 100vw;
+    height: 6vw;
+    border-bottom: 1px dashed black;
+    color: black;
+    /* font-family: "Kalnia"; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 76vw;
-    height: 4.5vw;
+    padding: 0 1.5vw;
+}
+
+.logo
+{
+    width: 17vw;
+    height: 5vw;
+    font-size: 2.5vw;
+    font-weight: 600;
+    padding: 1vw;
+    line-height: 2.3vw;
+    font-family: "Kalnia";
+    /* opacity: 0; */
+    margin: 0 0 1.8vw 0;
 }
 
 .profile
 {
     position: fixed ;
-    top: 1vw;
+    top: 1.5vw;
+    right: 1.5vw;
+    cursor: default;
 }
 
 .profileName
 {
     width: 9vw;
     height: 2.7vw;
-    border-radius: 0.5vw 0.5vw 0 0;
+    border-radius: 1.5vw;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     background-color: #ffffff31;
+    border: 1px solid #2a2a2a;
+    transition: all 0.2s ease-out;
+}
+
+.profileName:hover
+{
+    border-radius: 1vw;
 }
 
 .dropdown
@@ -62,10 +71,6 @@
     padding: 0.2vw;
 }
 
-/* .profileIcon{
-
-} */
-
 .downArrow
 {
     transition: all 0.2s ease-out;
@@ -78,8 +83,8 @@
     justify-content: space-evenly;
     width: 85%;
     height: 40%;
-    background-color: #2a2a2a;
-    color: #fff;
+    background-color: aliceblue;
+    color: #2a2a2a;
     margin: 0.3vw 0 ;
     border-radius: 0.5vw;
     transition: all 0.2s ease-out;
@@ -90,6 +95,7 @@
 .menuButton:hover
 {
     background-color: #2a2a2a72;
+    color: aliceblue;
 }
 
 .menuButton:active
