--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -15,3 +15,133 @@
     color: #2a2a2a;
     z-index: 0;
 }
+
+.navbar
+{
+    width: 100vw;
+    height: 6vw;
+    border-bottom: 1px dashed black;
+    color: black;
+    /* font-family: "Kalnia"; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1.5vw;
+}
+
+.logo
+{
+    width: 17vw;
+    height: 5vw;
+    font-size: 2.5vw;
+    font-weight: 600;
+    padding: 1vw 0;
+    line-height: 2.3vw;
+    font-family: "Kalnia";
+    /* opacity: 0; */
+    margin: 0 0 1.8vw 0;
+    cursor: default;
+}
+
+.profile
+{
+    position: fixed ;
+    top: 1.5vw;
+    right: 1.5vw;
+    cursor: default;
+}
+
+.profileName
+{
+    width: 9vw;
+    height: 2.7vw;
+    border-radius: 1.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #ffffff31;
+    border: 1px solid #2a2a2a;
+    transition: all 0.2s ease-out;
+}
+
+.profileName:hover
+{
+    border-radius: 1vw;
+}
+
+.dropdown
+{
+    width: 9vw;
+    border-radius: 0 0 0.8vw 0.8vw;
+    height: 8vw;
+    background-color: #5337AC;
+    color: #2a2a2a;
+    border-bottom: 0.1vw solid #2a2a2a;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    padding: 0.2vw;
+}
+
+.downArrow
+{
+    transition: all 0.2s ease-out;
+}
+
+.menuButton
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 85%;
+    height: 40%;
+    background-color: aliceblue;
+    color: #2a2a2a;
+    margin: 0.3vw 0 ;
+    border-radius: 0.5vw;
+    transition: all 0.2s ease-out;
+    cursor: default;
+
+}
+
+.menuButton:hover
+{
+    background-color: #2a2a2a72;
+    color: aliceblue;
+}
+
+.menuButton:active
+{
+    background-color: #fff;
+    color: #2a2a2a;
+}
+
+/* ----------------------------------------------- Body ----------------------------------------------------- */
+
+.profileBody
+{
+    width: 100vw;
+    height: 87.5vh;
+    /* border: 1px solid black; */
+    padding: 1vw;
+}
+
+.hero
+{
+    width: 100%;
+    height: 42.5%;
+    border: 1px solid black;
+    padding: 0.5vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.heroText
+{
+    width: 50%;
+    height: 100%;
+    border: 1px solid black;
+    
+}
