--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -130,9 +130,9 @@
 .hero
 {
     width: 100%;
-    height: 42.5%;
+    height: 40%;
     border: 1px solid black;
-    padding: 0.5vw;
+    padding: 0 0.5vw;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -142,6 +142,36 @@
 {
     width: 50%;
     height: 100%;
-    border: 1px solid black;
-    
+    /* border: 1px solid black; */
+}
+
+.dayGreet
+{
+    width: 53%;
+    height: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly8
+}
+
+.heroInfo
+{
+    width: 100%;
+    height: 5vw;
+    background-color: #836cc734;
+    margin: 1vw 0;
+    color: #2a2a2a;
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 2vw;
+    transition: all 0.2s ease-out;
+}
+
+.heroInfo:hover
+{
+    border-radius: 1vw;
+    width: 90%;
 }
