--- a/Frontend/Styles/leftMenu.css
+++ b/Frontend/Styles/leftMenu.css
@@ -54,13 +54,13 @@
 
 .sem
 {
-    width: 100%;
+    width: 102.5%;
     height: 2.5vw;
     font-size: 1.2vw;
     margin: 0.5vw;
     display: flex;
     align-items: center;
-    justify-content: center;
+    border-bottom: 2px solid aliceblue;
 }
 
 .semToggle
