--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -164,6 +164,7 @@
     align-items: center;
     justify-content: center ;
     text-align: center;
+    font-size: 1vw;
     font-weight: 600;
     border-radius: 2vw;
     transition: all 0.3s ease-out;
@@ -185,3 +186,15 @@
     padding: 0.5vw;
 }
 
+input
+{
+    background-color: transparent;
+    width: 20vw;
+    height: 2vw;
+    padding: 0 0.5vw;
+    font-size: 1.3vw;
+    border-left: 5px solid #5237ac98;
+    border-bottom: 1px solid #5237ac98;
+    border-radius: 0.2vw;
+    margin: 0.5vw;
+}
