--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -20,10 +20,9 @@
 .navbar
 {
     width: 100vw;
-    height: 6vw;
+    height: 5.5vw;
     position: relative;
     top: -20%;
-    margin: 0 0 1.5vw 0;
     color: black;
     background-color: #836cc734;
     border-radius: 0 0 1vw 1vw;
@@ -42,15 +41,16 @@
     padding: 1vw 0;
     line-height: 2.3vw;
     font-family: "Kalnia";
-    /* opacity: 0; */
+    opacity: 0;
     margin: 0 0 1.8vw 0;
     cursor: default;
 }
 
 .profile
 {
-    position: absolute ;
+    position: fixed;
     top: 1.5vw;
+    opacity: 0;
     right: 1.5vw;
     cursor: default;
 }
@@ -106,7 +106,6 @@
     border-radius: 0.5vw;
     transition: all 0.2s ease-out;
     cursor: default;
-
 }
 
 .menuButton:hover
@@ -125,9 +124,9 @@
 
 .profileBody
 {
+    margin: 0.5vw 0 0 0;
     width: 100vw;
     height: 87.5vh;
-    /* border: 1px solid black; */
     padding: 1vw;
 }
 
@@ -135,7 +134,6 @@
 {
     width: 100%;
     height: 50%;
-    /* border: 1px solid black; */
     padding: 0 1vw;
     display: flex;
     align-items: center;
@@ -146,7 +144,6 @@
 {
     width: 40%;
     height: 100%;
-    /* border: 1px solid black; */
 }
 
 .dayGreet
@@ -185,9 +182,8 @@
 .updateDetails
 {
     width: 50%;
-    height: 100%;
+    height: 20vw;
     margin: 2vw 0;
-    /* border: 2px solid black; */
     background: url('/form3.jpg') no-repeat;
     background-size: cover;
     border-radius: 2vw;
@@ -224,7 +220,7 @@ input
     width: 20vw;
     height: 2vw;
     padding: 0 0.5vw;
-    font-size: 1.3vw;
+    font-size: 1.25vw;
     border: 2px solid #5337AC;
     border-radius: 0.3vw;
     margin: 0.5vw;
@@ -239,4 +235,24 @@ input
     height: 2.5vw;
     font-size: 1.2vw;
     font-weight: 600;
+    transition: all 0.2s ease-out;
+}
+
+.updateBtn:hover
+{
+    border-radius: 0.5vw;
+}
+
+.updateBtn:active
+{
+    color: aliceblue;
+    background-color: #654db5;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        height: auto;
+        flex-direction: column;
+        padding: 2vw; 
+    }
 }
