--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -186,7 +186,7 @@
     margin: 2vw 0;
     background: url('/form3.jpg') no-repeat;
     background-size: cover;
-    border-radius: 2vw;
+    border-radius: 1vw;
 }
 
 .updateForm
@@ -199,7 +199,7 @@
     flex-direction: column;
 }
 
-.fieldName
+.field
 {
     width: fit-content;
     height: 1vw;
