--- a/Frontend/Styles/navbar.css
+++ b/Frontend/Styles/navbar.css
@@ -53,6 +53,7 @@
 {
     width: 9vw;
     border-radius: 0 0 0.8vw 0.8vw;
+    font-size: 1.1vw;
     height: 8vw;
     background-color: #5337AC;
     color: #2a2a2a;
