--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -335,22 +335,85 @@ input
     100% { transform: rotate(360deg); }
   }
   
-  .uploadSpace
-  {
+.uploadSpace
+{
     width: 65vw;
     height: 18vw;
     background-color: #836cc734;
     border-radius: 2vw;
-    padding: 1vw;
+    padding: 0.8vw;
     display: flex;
     align-items: center;
-    justify-content: center;
-  }
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+.topLevel
+{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
 
 .uploadColumn
 {
-    width: 50%;
+    width: 45%;
     height: 100%;
     /* border: 2px dashed #2a2a2a8c; */
     border-radius: 1vw;
+}
+
+.uploader
+{
+    width: 100%;
+    height: 10.5vw;
+    padding: 3.8vw 0 0 7.9vw;
+    border: 2px dashed #2a2a2a;
+    border-radius: 2vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    /* background: url('/upload.png') center no-repeat;
+    background-size: contain; */
+}
+
+.uploadForm
+{
+    width: 50%;
+    height: 100%;
+}
+
+/* .uFormRow
+{
+    height: 2vw;
+    width: fit-content;
+    padding: 0.3vw;
+    border: 3px solid #5337AC;
+    border-radius: 0.5vw;
+} */
+
+.uploadField
+{
+    position: relative;
+    top: 0.7vw;
+    left: 1vw;
+    z-index: 1;
+    background-color: #DADBF4;
+    padding: 0 0.3vw;
+    width: fit-content;
+}
+
+.inputF
+{
+    background-color: transparent;
+    border: 3px solid #7460b7;
+    border-radius: 0.5vw;
+    width: fit-content;
+    height: 3vw;
+    padding: 0 0.5vw;
+    margin: 0.2vw;
+    z-index: 0;
+    cursor: default;
 }
