--- a/Frontend/Styles/profile.css
+++ b/Frontend/Styles/profile.css
@@ -121,7 +121,7 @@
     color: #2a2a2a;
 }
 
-/* ----------------------------------------------- Body ----------------------------------------------------- */
+/* ----------------------------------------------- Body ------------------------------------------------- */
 
 .profileBody
 {
@@ -271,6 +271,12 @@ input
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
+    transition: all 0.2s ease-out;
+}
+
+.uploadCard:hover ,.uploadCard:focus
+{
+    width: 21vw;
 }
 
 .uploadData
@@ -324,7 +330,7 @@ input
   .reload-icon {
     width: 10vw;
     height: 10vw;
-    border: 4px solid #3498db; /* Change the border color */
+    border: 4px solid #654db5; /* Change the border color */
     border-radius: 50%;
     border-top: 4px solid transparent;
     animation: spin 1s linear infinite;
@@ -346,6 +352,13 @@ input
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
+    transition: all 0.2s ease-out;
+}
+
+.uploadSpace:hover, .uploadSpace:focus
+{
+    /* scale: 1.05; */
+    width: 65.5vw;
 }
 
 .topLevel
@@ -363,6 +376,7 @@ input
     height: 100%;
     /* border: 2px dashed #2a2a2a8c; */
     border-radius: 1vw;
+
 }
 
 .uploader
