Added Files listing with subject filter

--- a/Frontend/Styles/notesContent.css
+++ b/Frontend/Styles/notesContent.css
@@ -9,7 +9,7 @@
     top: 4.99vw;
     scrollbar-width: 0;
     width: 79vw;
-    height: 43.3vw;
+    height: 100vh;
     padding: 1vw 3vw;
     background-color: aliceblue;
     border-radius: 1vw 0 0 0;
