--- a/Frontend/Styles/login.css
+++ b/Frontend/Styles/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,9 +13,7 @@
     flex-direction: column; 
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(137, 118, 198);
-    color: white; */
-    /* border-radius: 0 10vw 10vw 0; */
+    color: white;
 }
 
 .innerLogin
@@ -35,7 +35,7 @@
 {
     width: 100%;
     height: 10%;
-    font-size: 2.5vw;
+    font-size: 3.7vw;
     text-align: center;
     font-weight: 600;
     margin: 3vw;
