--- a/Frontend/Styles/register.css
+++ b/Frontend/Styles/register.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -30,8 +32,17 @@
 {
     width: 100%;
     height: 10%;
-    font-weight: 600;
+    font-weight: 700;
     margin: 1vw;
+}
+
+.RegPara
+{
+    opacity: 0;
+    font-size: 1.6vw;
+    margin: 1.5vw;
+    text-align: center;
+    font-family: 'Caveat';
 }
 
 .rContent
@@ -56,20 +67,21 @@
 .rButton:hover
 {
     background-color: #8575bb;
+    border-radius: 1vw;
 }
 .form{
     color: black;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-margin-top: 15%;
-border-radius: 0.3vw;
-font-size: 1.4vw;
-    
+    margin-top: 15%;
+    border-radius: 0.3vw;
+    font-size: 1.4vw;
 }
 
-.error{
+/* .error
+{
     display: block;
     color: black;
-font-size: 125%;
-}
+    font-size: 125%;
+} */
