--- a/Frontend/Styles/notesContent.css
+++ b/Frontend/Styles/notesContent.css
@@ -4,15 +4,86 @@
 
 .notesContent
 {
-    position: fixed;
-    right: 0;
-    top: 4.99vw;
-    scrollbar-width: 0;
-    width: 79vw;
-    height: 100vh;
-    padding: 1vw 3vw;
-    background-color: aliceblue;
-    border-radius: 1vw 0 0 0;
-    /* border-left: 2px solid #826cc7; */
-    z-index: 0;
+  position: fixed;
+  right: 0;
+  top: 4.99vw;
+  scrollbar-width: 0;
+  width: 79vw;
+  height: 100vh;
+  padding: 1vw 2vw;
+  background-color: aliceblue;
+  border-radius: 1.1vw 0 0 0;
+  z-index: 0;
+  transition: all .2s ease-out;
+  overflow: scroll;
+  scrollbar-width: 0.2vw;
+}
+
+.notesContent:hover
+{
+  border-radius: 0.6vw;
+}
+
+.files-container 
+{
+  height: fit-content;
+  width: 100%;
+  border-radius: 1.5vw;
+  padding: 1vw 0.1vw;
+  background-color: #2a2a2a5e;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-direction: column;
+  transition: all .2s ease-out;
+  cursor: none;
+}
+
+.files-container:hover 
+{
+  border-radius: 1vw;
+}
+
+.fileView
+{
+  width: 100%;
+  height: 4vw;
+  padding: .1vw 2vw;
+  transition: all .2s ease-out;
+  cursor: none;
+}
+
+.fileView:hover
+{
+  scale: 1.01;
+}
+  
+.file-entry 
+{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1vw 1vw;
+  border-radius: 1.5vw;
+  height: fit-content;
+  font-size: 1.1vw;
+  width: 100%;
+  cursor: none;
+  transition: all .2s ease-out;
+}
+
+.file-entry:hover
+{
+  background-color: #2a2a2a2c;
+  color: #fff;
+  border-radius: 1vw;
+  font-weight: 600;
+}
+
+.horizontalBar 
+{
+  width: 100%;
+  height: 2px; 
+  background-color: #333; 
+  margin: 10px 0; 
 }
